<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:text="ᮞᮨᮏᮛᮂ ᮃᮊ᮪ᮞᮛ ᮞᮥᮔ᮪ᮓ"
                android:textColor="#000000"
                android:textSize="45dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/history1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/sejarah"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/history2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sejarah2"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/history3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sejarah3"
                android:textColor="#000000"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/history4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sejarah4"
                android:textColor="#000000"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>